# x-monitor

./: .example.env  .gitignore  AGENTS.md  Cargo.toml  README.md  x-monitor.example.toml
docs/: USAGE.md  rust-xdk-handoff.md  xdk-rust-sdk-deep-dive.md
monitor-configs/: example-account.yaml  gemini-3.1-pro.yaml  test.yaml
python_test/: .env.example  README.md  main.py  pyproject.toml
python_test/x_monitor_python_test/: __init__.py  tui.py
src/: ai.rs  app.rs  config.rs  main.rs  models.rs  target_files.rs  ui.rs  x_api.rs
