[package]
name = "x-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["clock", "serde"] }
crossterm = "0.29.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io", "codec"] }
toml = "0.8.20"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
webbrowser = "1.0.4"
